# CNZ_service20_opportunities_v3

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  run_test.sh
service20/: .env.example  .gitignore  AGENT_INPUTS.md  AGENT_IO_FORMATS.md  ALERTS_DOCUMENTATION.md  API_GETTING_STARTED.md  ARIZE_22102025.md  ARIZE_TRACING_SETUP.md  AUTONOMOUS_FUNDING_RESEARCH.md  AWS_CLI_SETUP.md  AWS_REPLICATION_GUIDE.md  BATCH_MATCHING_FIXES.md  BATCH_MATCHING_README.md  CHANGELOG_2025-01-21.md  CITY_RESEARCH_README.md  CURL_COMMANDS.md  DATABASE_INTEGRATION.md  FUNDER_RESEARCH_PLAN.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MATCHING_MIGRATION.md  MATCHING_README.md  MONITORING_SETUP.md  OPPORTUNITY_TERM_MATCHING_SUCCESS.md  QUERY_SCRIPTS.md  QUICKSTART_SQS.md  QUICKSTART_TEST.md  SERVICE_OVERVIEW.md  SQS_INTEGRATION.md  THREEWAY_MATCHER_README.md  api_server.py  batch_match_opportunities.py  check_matches_columns.py  check_opportunity_data.py  check_schema.py  check_sector_constraint.py  check_tables.py  clear_matches.py  create_alert_api.py  create_research_table.py  (+55 more)
service20/.claude/: settings.local.json
service20/app/: __init__.py  config.py  database.py  main.py
service20/docs/: API.md
service20/examples/: README.md  label1.md  label2.md  predicted.md  sqs_basic_example.py  sqs_consumer_example.py  sqs_research_integration_example.py
service20/open_deep_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_funding_research.py
(+49 files in other folders)
